<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chat"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_my_order"
        android:icon="@drawable/orders"
        android:title="@string/title_my_order" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifecation"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>