<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="magma.global.restaurant.presentation.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="magma.global.restaurant.presentation.home.ui.chats.ChatsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="magma.global.restaurant.presentation.home.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="magma.global.restaurant.presentation.home.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_my_order"
        android:name="magma.global.restaurant.presentation.home.ui.my_order.MyOrderFragment"
        android:label="@string/title_my_order"
        tools:layout="@layout/fragment_my_order" />
</navigation>