<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="magma.global.restaurant.presentation.registration.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_light_flowers_background">

        <TextView
            android:id="@+id/txt_header"
            style="@style/MaterialTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:textSize="@dimen/size_header"
            android:textStyle="bold"
            android:text="@string/app_name"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:padding="@dimen/spacing_default"
            android:minHeight="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:padding="@dimen/spacing_default"
            android:minHeight="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/txt_title_select"
            style="@style/MaterialTextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_medium"
            android:textColor="@color/gray"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_continue_guest"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue_guest"
            style="@style/MaterialOutlinedButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:text="@string/continue_as_guest"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/spacing_default"
            android:minHeight="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_powered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_title_powered"
            style="@style/MaterialTextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_medium"
            android:textColor="@color/gray"
            android:text="@string/powered_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_company"/>

        <TextView
            android:id="@+id/txt_title_company"
            style="@style/MaterialTextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_profile_top"
            android:text="@string/magma"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/size_toolbar_title"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>