<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="magma.abikarshak.restaurant.presentation.registration.language.LanguageViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_light_gradient_background">


        <TextView
            android:id="@+id/txt_header"
            style="@style/MaterialTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:textSize="@dimen/size_header"
            android:textStyle="bold"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_title_select"
            style="@style/MaterialTextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_medium"
            android:textColor="@color/gray"
            android:text="@string/choose_your_favorite_language"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/txt_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_english"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_english"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="@dimen/size_title"
            android:padding="@dimen/spacing_default"
            android:minHeight="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_powered"
            app:layout_constraintStart_toEndOf="@+id/btn_arabic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_select" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_arabic"
            style="@style/MaterialOutlinedButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:text="@string/arabic"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_title"
            android:padding="@dimen/spacing_default"
            android:minHeight="0dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="@+id/btn_english"
            app:layout_constraintEnd_toStartOf="@+id/btn_english"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_english" />

        <TextView
            android:id="@+id/txt_title_powered"
            style="@style/MaterialTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_medium"
            android:textColor="@color/gray"
            android:text="@string/powered_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_company"/>

        <TextView
            android:id="@+id/txt_title_company"
            style="@style/MaterialTextTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_profile_top"
            android:text="@string/magma"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>